Fixed animation name and tweaked spacing

--- a/_sass/4-elements/_base.scss
+++ b/_sass/4-elements/_base.scss
@@ -38,6 +38,6 @@ body {
 }
 
 main {
-  @include animation('fade-in');
+  @include animation(fade-in);
   position: relative;
 }
