--- a/_sass/5-blocks/_cover.scss
+++ b/_sass/5-blocks/_cover.scss
@@ -15,11 +15,11 @@
   text-align: center;
 
   .title {
-    @include animation('fade-in');
+    @include animation(fade-in);
     position: relative;
     z-index: 1;
     margin: auto;
-    padding: 6rem 1rem;
+    padding: 6rem 1rem 6rem;
     text-align: center;
 
     h1 {
@@ -44,7 +44,7 @@
 
     time {
       display: inline-block;
-      font-size: size(small);
+      font-size: size(smaller);
       opacity: .7;
       margin-bottom: 1rem;
     }
