--- a/_sass/5-blocks/_post.scss
+++ b/_sass/5-blocks/_post.scss
@@ -46,7 +46,7 @@
   }
 
   .title {
-    padding: 8rem 1rem 4rem;
+    padding: 8rem 1rem 2rem;
   }
 
   footer {
